--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2209,7 +2209,7 @@ input, select, textarea {
 		}
 
 #main-title{
-	border: 1px solid red;
+	/* border: 1px solid red; */
 	text-align: center;
 	margin-bottom: 10%;
 	color: white;
@@ -2217,6 +2217,7 @@ input, select, textarea {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
+	border-bottom: 3px rgba(255, 255, 255, 0.808) solid;
 }
 
 .title{
@@ -2226,3 +2227,25 @@ input, select, textarea {
 .title2{
 	color: rgba(255, 255, 255, 0.767);
 }
+.skills {
+	list-style-type: none;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+	padding-left: 0;
+	font-weight: 400;
+}
+
+.skills>li {
+	padding-right: 1vw;
+	padding-left: 0;
+}
+
+/* li {
+	list-style: none;
+	display: inline-block;
+	width: calc(100% / 3);
+	height: 120px;
+	text-align: center;
+} */
