--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2193,18 +2193,20 @@ input, select, textarea {
 		body {
 			background: linear-gradient(-45deg, #ee7752, #9213ac, #1783ca, #23d5ab);
 			background-size: 400% 400%;
+			/* background-size: 100% 100%; */
 			animation: gradient 15s ease infinite;
 		}
 		
 		@keyframes gradient {
 			0% {
-				background-position: 0% 50%;
+				background-position: 0% 100%;
 			}
+			
 			50% {
-				background-position: 100% 50%;
+				background-position: 100% 100%;
 			}
 			100% {
-				background-position: 0% 50%;
+				background-position: 0% 100%;
 			}
 		}
 
@@ -2242,10 +2244,7 @@ input, select, textarea {
 	padding-left: 0;
 }
 
-/* li {
-	list-style: none;
-	display: inline-block;
-	width: calc(100% / 3);
-	height: 120px;
-	text-align: center;
-} */
+.sub{
+	padding-bottom: 10%;
+	/* border: 1px solid red; */
+}
