--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2191,7 +2191,7 @@ input, select, textarea {
 		}
 
 		body {
-			background: linear-gradient(-45deg, #ee7752, #9213ac, #1783ca, #23d5ab);
+			background: linear-gradient(-45deg, #ee7752, #ac138b, #1783ca, #23d5ab);
 			background-size: 400% 400%;
 			/* background-size: 100% 100%; */
 			animation: gradient 15s ease infinite;
@@ -2246,5 +2246,22 @@ input, select, textarea {
 
 .sub{
 	padding-bottom: 10%;
+}
+.work-title{
+	text-align: center;
+	margin-bottom: 5vh;
+}
+.job-listing {
 	/* border: 1px solid red; */
+	/* border: 1px solid red; */
+	padding: 5%;
+}
+.job-listing > h2{
+	padding-top: 1vh;
+	font-size: 1.3em;
+	color: rgba(0, 0, 0, 0.60);
+}
+.spacer{
+	border: 1px solid #bb169f ;
+	margin: 10px;
 }
