--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1327,7 +1327,7 @@ input, select, textarea {
 	body, input, textarea, select {
 		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 300;
-		color: #777777;
+		color: #242424;
 		font-size: 20pt;
 		line-height: 1.75em;
 	}
@@ -2256,14 +2256,28 @@ input, select, textarea {
 }
 
 .project{
-	/* border: 1px solid red; */
 	display: flex;
 	width: 100%;
 }
 .project-img{
-	width: 25%;
+	/* width: 25%; */
+}
+.project-img >img {
+	width: 100%;
+	border-radius: 10px;
+	/* border: 3px solid red; */
+
 }
 .project-text{
-	width: 75%;
-	/* border: 1px solid green; */
+	width: 100%;
+}
+.project-links{
+	display: flex;
+	border-bottom: 2px solid #ac138b;
+	justify-content: space-between;
+	align-items: baseline;
+	margin-bottom: 2vh;
+}
+a {
+	text-decoration: none;
 }
